--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>One Month Ideal Mother & Father Program</title>
+    <title>Ideal Mother & Father Deep Dive</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <style>
         body, html {
@@ -35,6 +35,9 @@
             font-size: 1.5rem;
             margin-bottom: 2rem;
         }
+        p {
+            font-size: 1.3rem;
+        }
         .btn {
             display: inline-block;
             padding: 15px 30px;
@@ -52,7 +55,7 @@
             padding: 5rem 2rem;
         }
         .container {
-            max-width: 1200px;
+            max-width: 800px;
             margin: 0 auto;
         }
         .grid {
@@ -134,13 +137,9 @@
             overflow: hidden;
         }
         .facilitator-content {
-            /* position: relative;
-            z-index: 1;
-            color: #333;
-            max-width: 800px; */
-            max-width: 1200px;
+            max-width: 800px;
             margin: 0 auto;
-            background-color: #f9f9f9; /* Subtle background */
+            /* background-color: #f9f9f9; Subtle background */
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Soft shadow for depth */
             font-family: 'Arial', sans-serif; /* Simple, clean font */
@@ -149,34 +148,31 @@
         }
         .facilitator-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 4fr));
+            padding: 5rem;
         }
         .facilitator-img {
             display: flex;
-            align-items: center;
-            justify-content: center;
             text-align: left;
-            padding: 2rem;
         }
         .facilitator-img img {
-            max-width: 400px; /* Set the max width of the image */
+            max-width: 200px; /* Set the max width of the image */
             border-radius: 10px; /* Optional: round the image corners */
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: add a shadow for depth */
         }
-        .facilitator-text {
-            padding: 5rem;
-        }
         .facilitator-text h2 {
             text-align: left;
+        }
+        .testimonial-content {
+            max-width: 80%;
         }
     </style>
 </head>
 <body>
     <div class="hero">
         <div class="hero-content">
-            <h1>One Month Ideal Mother & Father Program</h1>
+            <h1>Ideal Mother & Father Healing Journey</h1>
+            <p>A <b>one-month</b> experiential deep dive to <b>experience relief</b> and a <b>sense of what could be possible.</b></p>
             <p><em>First pilot starting October 7</em></p>
-            <p>Taste what it feels like to be securely attached, experience relief and a sense of what could be possible.</p>
             <a href="https://amandango1.typeform.com/to/zyBfiaXx" target="_blank" class="btn">Apply now</a>
         </div>
     </div>
@@ -184,11 +180,20 @@
     <section class="section about-ipf">
         <div class="container">
             <h2>Move towards secure attachment</h2>
-            <p>Everything is about attachment.</p>
-            <p>Ideal Parent Figure therapy was developed to help patients who struggled with other forms of therapy reach secure attachment. It is immensely powerful – a pilot study found that symptoms significantly improved for complex PTSD patients after four weeks of 16 minute visualizations once a week.</p>
-            <p>This program is designed to help you understand everything about attachment, and move towards secure attachment.</p>
-            <p>It is influenced heavily by Ideal Parent Figure, but also includes masculine and feminine dynamics from polarity work and parts work.</p>
-            <p>This is our first pilot!</p>
+            <p>
+                When we get all of our needs met as a child, we move through the world with wonder, confidence, self-love, and a deep connection to who we are and our purpose. 
+                When we don't (which is true for so many of us), we carry the wounds of insecurity, fear, self-criticism, low self-esteem, and low self-confidence.
+                <b>It is possible to meet the needs that didn't get met and move into secure attachment.</b>
+            </p>
+            <p>
+                Ideal parent figure (IPF) is a therapy methodology that meets our childhood needs. 
+                <b>A pilot study found that four 16-minute IPF visualizations each week for a month significantly reduced symptoms of people with complex PTSD.</b>
+            <p>
+                This program is designed to be a lot more than four 16-minute visualizations carried out over a month. We want to help you experience what you didn't think was possible (or did not even know you were missing), and help your nervous system learn a felt sense of security, safety, comfort, attunement, delight in your being, and support for exploration.
+            </p>
+            <p>
+                This is a first pilot, built on what I've learned from all of my training, coaching clients, and running Ideal Mother & Father workshops. It is heavily influenced by the Ideal Parent Figure methodology, but also expands on it, weaving in parts work, the divine masculine and feminine, and energetic work.
+            </p> 
         </div>
     </section>
 
@@ -197,18 +202,30 @@
             <h2>What's Included</h2>
             <div class="grid">
                 <div class="card">
+                    <div class="session-icon">
+                        <i class="fas fa-phone"></i>
+                    </div>
                     <h3>Weekly Group Calls</h3>
-                    <p>1.5 hours of collaborative learning and support</p>
+                    <p>1.5 hours of collaborative learning and support each week</p>
                 </div>
                 <div class="card">
+                    <div class="session-icon">
+                        <i class="fas fa-person"></i>
+                    </div>
                     <h3>One-on-One Sessions</h3>
-                    <p>30 minutes of personalized guidance each week</p>
+                    <p>30 minutes of one-on-one visualizations and guidance each week</p>
                 </div>
                 <div class="card">
+                    <div class="session-icon">
+                        <i class="fas fa-heart"></i>
+                    </div>
                     <h3>Daily Meditations</h3>
-                    <p>Personalized meditations to receive support from your ideal parents</p>
+                    <p>Personalized meditations to receive the support you need from your ideal parents</p>
                 </div>
                 <div class="card">
+                    <div class="session-icon">
+                        <i class="fas fa-heart-pulse"></i>
+                    </div>
                     <h3>Targeted Support</h3>
                     <p>Meditations for specific emotions like anxiety, depression, anger, and stuckness</p>
                 </div>
@@ -268,7 +285,8 @@
                     <h2>About me</h2>
                     <p>Hi, I'm Amanda.</p>
                     <p>I've been on a journey into my inner world for the last 8 years. During that time, I've explored every modality I can find – from traditional therapies like CBT and psychoanalysis, to somatic modalities like focusing and parts work, to awakening and energy healing.</p>
-                    <p>Ideal parent figure was such a powerful modality for me. Before doing ideal parent figure, I didn't know that it was possible to feel safe, protected, secure.</p>
+                    <p>Doing ideal parent figure was one of the first times I realized what it could feel like to get my needs met. </p>
+                    <p><blockquote>I've been doing this therapy for 8 months. In that time, I've had many moments of deep, felt senses of relief. I've tasted what it's like to actually have unconditional love and a true belief that I am safe and cared for. I feel like Mary in the colorless room: Before, I could describe what security would feel like and point to moments where I had felt more secure. But what I've felt since starting IPF is like a different qualia that I couldn't have imagined before. I didn't possess the experiential building blocks to be able to imagine this feeling of security.</blockquote></p>
                     <p>I now coach people with a combination of ideal parent figure, parts work, and energy healing. Ideal parent figure has been so helpful for my clients, and I want to share that experience with more people.</p>
                 </div>
             </div>
@@ -276,7 +294,7 @@
     </section>
 
     <section class="section testimonials">
-        <div class="container">
+        <div class="container testimonial-content">
             <h2>What people say about working with me</h2>
             <div class="grid">
                 <div class="testimonial-card">
@@ -284,11 +302,14 @@
                     </p>
                 </div>
                 <div class="testimonial-card">
-                    <p>"Working with Amanda has helped me build an awareness of a love that has always been there. This, in combination with internal parts work, has been helpful in learning how to hold myself and my struggles with compassion, which has been incredibly healing. She is kind and patient and also knows when to push and challenge me. She is also great at intuiting what I am sometimes unable to see regarding certain emotions and thoughts. I would highly recommend working with Amanda if you are looking to become more intimate with yourself, shadows and all."
+                    <p>"Working with Amanda has helped me build an awareness of a love that has always been there. ... She is kind and patient and also knows when to push and challenge me. She is also great at intuiting what I am sometimes unable to see regarding certain emotions and thoughts. I would highly recommend working with Amanda if you are looking to become more intimate with yourself, shadows and all."
                     </p>
                 </div>
                 <div class="testimonial-card">
                     <p>“The exercises that Amanda ran me through were so thoughtfully conducted and explained that I started the process of realizing and processing old traumas that were holding me back in the span of less than an hour."</p>
+                </div>
+                <div class="testimonial-card">
+                    <p>“What I love about Amanda's coaching is her vast knowledge of modalities, which meant I could explore a number of different approaches to patterns or challenges and find one I resonated with. If you’re feeling stuck in a certain part of life and need a fresh way of looking at things, or deeper understanding of self, I’d highly recommend coaching with Amanda."</p>
                 </div>
             </div>
         </div>
@@ -298,8 +319,9 @@
         <div class="container">
             <h2>Join the pilot program</h2>
             <!-- <div class="price">$150</div> -->
-            <p>The month-long program is <b>$150</b>. We offer a sliding scale if needed.</p>
-            <a href="https://amandango1.typeform.com/to/zyBfiaXx" class="btn">Apply now</a>
+            <p>The month-long program is <b>$200</b>. We offer a sliding scale if needed.</p>
+            <br>
+            <a href="https://amandango1.typeform.com/to/zyBfiaXx" target="_blank" class="btn">Apply now</a>
         </div>
     </section>
 
